<resources>

    <string name="app_name">Locator</string>
    <string name="facebook_app_id">2044444992523630</string>
    <string name="fb_login_protocol_scheme">fb2044444992523630</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="hint_email">Email</string>
    <string name="login_button">Log in</string>
    <string name="forgot_pass"><u>Forgot password?</u></string>
    <string name="create_acc"><u>Create account.</u></string>
    <string name="hint_pass">Password</string>
    <string name="hint_confirm_pass">Confirm password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_create_account">Create account</string>
    <string name="log_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="btn_forgot">Send email</string>
    <string name="btn_login">Log in</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_email">Enter your email:</string>
    <string name="btnCancel">Cancel</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Quests">Quests</string>
    <string name="Add_new_quest">New quest</string>
    <string name="Friends">Friends</string>
    <string name="txt_images">Image:</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="hint">Hint</string>
    <string name="name">Name</string>
    <string name="add_item">Add item</string>
    <string name="add_quest">Add quest</string>
    <string name="Map">Your map</string>
    <string name="quests_active">Active</string>
    <string name="quests_finished">Finished</string>
    <string name="quests_feed">Feed</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="quests_added">Added</string>
    <string name="creators">Vertical Wombats</string>
    <string name="title_activity_map">Map</string>

    <string name="quest_description">Quest description</string>
    <string name="quest_name">Quest name</string>
    <string name="radio_istorijski">Historical</string>
    <string name="radio_zabavni">Fun</string>
    <string name="submit_quest">Submit</string>
    <string name="log_out">Log out</string>
    <string name="question">Question</string>
    <string name="first_answer">First anaswer</string>
    <string name="second_answer">Second answer</string>
    <string name="third_answer">Third answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="show_map">Show map</string>
    <string name="added_on">Added on:</string>
    <string name="create_group"><u>Create group</u></string>
    <string name="profile">Profile</string>
    <string name="name_dots">Name:</string>
    <string name="discovered_friends">Discovered friends</string>
    <string name="slash_discovered_friends">-Discovered friends</string>
    <string name="slash_friends">-Friends</string>
    <string name="settings">Settings</string>
    <string name="location_service_enabled">Location service</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Loongitude</string>
    <string name="points_dots">Points:</string>
    <string name="email_dots">Email:</string>
    <string name="Istrazivacki">Scientific</string>
    <string name="filter">Filter</string>
    <string name="radius">Radius</string>
    <string name="all">All</string>


</resources>
