<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySubmitQuest">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24px"
        app:title="@string/app_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quest_name_layout"
        android:hint="@string/quest_name"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        style="@style/CustomAccentEditText"
        android:layout_marginEnd="50dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quest_description_layout"
        android:hint="@string/quest_description"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quest_name_layout"
        style="@style/CustomAccentEditText"
        android:layout_marginEnd="50dp"

        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/quest_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitude_layout"
        android:hint="@string/longitude"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quest_description_layout"
        style="@style/CustomAccentEditText"
        android:layout_marginEnd="50dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latitude_layout"
        android:hint="@string/latitude"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitude_layout"
        style="@style/CustomAccentEditText"
        android:layout_marginEnd="50dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:clickable="false"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_location_pin"
        style="@style/IconOnlyButton"
        app:cornerRadius="24dp"
        android:onClick="getLocation"
        app:icon="@drawable/ic_round_location_on_24px"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/longitude_layout"
        app:layout_constraintTop_toTopOf="@+id/longitude_layout"
        app:layout_constraintVertical_bias="0.5" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_istrazivacki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude_layout"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radio_istorijski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/radio_istorijski"/>
        <RadioButton
            android:id="@+id/radio_zabavni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/Istrazivacki"/>
        <RadioButton
            android:id="@+id/radio_istrazivacki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/radio_zabavni"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_quest"
        android:text="@string/submit_quest"
        app:strokeColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        style="@style/CustomAccentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:icon="@drawable/ic_baseline_add_24px"
        app:iconGravity="textStart"
        app:iconTint="@color/white"

        />

</androidx.constraintlayout.widget.ConstraintLayout>