<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ActivityForgotPassword"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblResetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="18sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email_forgot_layout"
        android:hint="@string/hint_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblResetPassword"
        android:layout_marginTop="10dp"
        style="@style/CustomAccentEditText"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        style="@style/CustomAccentButton"
        android:id="@+id/btn_forgot"
        android:text="@string/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email_forgot_layout"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/CustomTextButton"
        android:id="@+id/btn_Cancel"
        android:text="@string/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_forgot"
        app:layout_constraintTop_toBottomOf="@id/edit_email_forgot_layout"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>